--- a/apps/ui/templates/home.html
+++ b/apps/ui/templates/home.html
@@ -7,8 +7,8 @@
 {# Hero via component #}
 {% set hero_eyebrow = "GestureLabs · A3CP" %}
 {% set hero_title = "Adaptive communication technology for non-speaking people." %}
-{% set hero_subtitle = "Communication is a human right. GestureLabs is developing open-source tools that leave no one
-behind." %}
+{% set hero_subtitle = "Communication is a human right. GestureLabs is developing open-source tools that personalize to
+a user's abilities and make expression accessible." %}
 {% set hero_primary_cta_label = "Learn more" %}
 {% set hero_primary_cta_href = "/about" %}
 {% set hero_secondary_cta_label = "Join us" %}
