changed names of icons

--- a/apps/ui/templates/home.html
+++ b/apps/ui/templates/home.html
@@ -57,8 +57,8 @@ commercial lock-in." %}
 
 <section class="partners">
     <ul class="logo-list">
-        <li><img src="{{ url_for('static', path='img/logos/OU_logo.png') }}" alt="The Open University"></li>
-        <li><img src="{{ url_for('static', path='img/logos/SocialImpact_logo.png') }}" alt="Social Impact Lab"></li>
+        <li><img src="{{ url_for('static', path='img/logos/ou_logo.png') }}" alt="The Open University"></li>
+        <li><img src="{{ url_for('static', path='img/logos/social_impact_logo.png') }}" alt="Social Impact Lab"></li>
     </ul>
 </section>
 
