new image and minor text changes

--- a/apps/ui/templates/home.html
+++ b/apps/ui/templates/home.html
@@ -8,11 +8,15 @@
 {% set hero_eyebrow = "GestureLabs · A3CP" %}
 {% set hero_title = "Ability Adaptive Communication technology for Non-Speaking People." %}
 {% set hero_subtitle = "Communication is a human right. GestureLabs is developing open-source AI communication tools
-that adapt to the idividual and their abilities." %}
+that adapt to the individual and their abilities." %}
 {% set hero_primary_cta_label = "Learn more" %}
 {% set hero_primary_cta_href = "/about" %}
 {% set hero_secondary_cta_label = "Join us" %}
 {% set hero_secondary_cta_href = "/get-involved" %}
+
+{# NEW: point to your static hero image #}
+{% set hero_illustration_src = "/static/img/illustrations/landmarks.png" %}
+{% set hero_illustration_alt = "Digitizing human embodied communication" %}
 
 {% include "components/_hero_section.html" %}
 
